# visual_mtt

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  plugins.xml
benchmark/: CMakeLists.txt
benchmark/include/benchmark/: benchmark.h
benchmark/launch/: benchmark.launch
benchmark/matlab/: benchmark.m
benchmark/param/: camera_sim.yaml  dynamic_default.yaml  dynamic_small_object.yaml  plugin_whitelist.yaml  static_default.yaml
benchmark/src/: benchmark.cpp  benchmark_node.cpp
cfg/: homography.cfg  rransac.cfg  visual_frontend.cfg
include/visual_mtt/camera_sim/: camera_sim.h
include/visual_mtt/common/: gpu.h  object_types.h  opencv_compat.h  params.h  system.h
include/visual_mtt/rransac/: accessors.h  opencv_accessors.h  rransac.h
include/visual_mtt/visual_frontend/: accessors.h  doxygen_main.h  feature_manager.h  gpu.h  homography_calculator.h  rransac.h  source.h  source_background.h  source_features.h  source_measurement.h  ucv.h  visual_frontend.h
include/visual_mtt/visual_frontend/feature_manager/: feature_base.h  feature_manager.h  feature_tracker.h  lkt_tracker.h
include/visual_mtt/visual_frontend/homography_manager/: homography_manager.h  homography_method.h  simple_homography.h
include/visual_mtt/visual_frontend/measurement_manager/: color_detector.h  darknet_plugin.h  difference_image.h  feature_motion.h  measurement_base.h  measurement_manager.h
include/visual_mtt/visual_frontend/recognition_manager/: recognition_manager.h  recognition_method.h  template_matching.h
include/visual_mtt/visual_frontend/source_manager/: difference_image.h  feature_motion.h  feature_outliers.h  measurement_source.h  source_manager.h
include/visual_mtt/visual_frontend/transform_manager/: simple_homography.h  transform_base.h  transform_manager.h
launch/: play_for_gui.launch  play_from_recording.launch  visual_mtt.launch
matlab/: test.m
msg/: Measurement.msg  RRANSACScan.msg  Source.msg  Stats.msg  Track.msg  Tracks.msg  Utilization.msg
param/: camera.yaml  camera_sim.yaml  default.yaml  default_small_object.yaml  gnsac_default.yaml  plugin_whitelist.yaml  simulation.yaml  static_default.yaml
scripts/: .gitignore  benchmark.py  simplevideo2ros.py  video_player.py
src/: temp.cpp
src/camera_sim/: camera_sim.cpp  node.cpp
src/common/: gpu.cpp  system.cpp
src/rransac/: node.cpp  rransac.cpp
src/visual_frontend/: feature_manager.cpp  gpu.cpp  homography_calculator.cpp  node.cpp  rransac.cpp  source_background.cpp  source_features.cpp  visual_frontend.cpp
src/visual_frontend/feature_manager/: feature_manager.cpp  lkt_tracker.cpp
src/visual_frontend/homography_manager/: homography_manager.cpp  simple_homography.cpp
src/visual_frontend/measurement_manager/: color_detector.cpp  darknet_plugin.cpp  difference_image.cpp  feature_motion.cpp  measurement_manager.cpp
src/visual_frontend/recognition_manager/: recognition_manager.cpp  template_matching.cpp
src/visual_frontend/source_manager/: difference_image.cpp  feature_motion.cpp  feature_outliers.cpp  source_manager.cpp
src/visual_frontend/transform_manager/: simple_homography.cpp  transform_manager.cpp
srv/: RRANSACParams.srv  RecognizeTrack.srv
test/: CMakeLists.txt
