<?xml version="1.0"?>
<package>
  <name>visual_mtt</name>
  <version>2.1.0</version>
  <description>A visual measurement frontend for the Recursive-RANSAC Tracker</description>

  <maintainer email="jeffrey.d.millard@gmail.com">Jeff Millard</maintainer>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <maintainer email="markiepetersen@gmail.com">Mark Petersen</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>
  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    
    <!-- Exporting plugins -->
    <visual_mtt plugin="${prefix}/plugins.xml"/>

  </export>
</package>